--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "clsx": "^2.0.0",
+    "effect": "2.0.0-next.62",
     "next": "^14.0.4",
     "nextra": "^2.13.2",
     "nextra-theme-docs": "^2.13.2",
